--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,7 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
+# /node_modules
+# /.pnp
+#.pnp.js
 
 # production
 /build
@@ -21,3 +16,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+# Ignorerar lokalkopia av Swiper CSS
+node_modules
